--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "devDependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-sanitizer": "^1.0.3",
+    "method-override": "^2.3.10",
     "mongoose": "^5.0.8"
   },
   "dependencies": {
-    "ejs": "^2.5.7"
+    "ejs": "^2.5.7",
+    "sanitize-html": "^1.18.2"
   }
 }
